--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-streamlit_option_menu
-pandas
-numpy
-plotly-express
-openpyxl
+streamlit==1.38.0
+streamlit_option_menu==0.3.13
+pandas==2.1.4
+numpy==1.26.4
+plotly-express==0.4.1
+openpyxl==3.1.5
 base64
 	
